k8s/lb-reverse-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-reverse-proxy
  labels:
    app: reverse-proxy
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 443
  selector:
    app: reverse-proxy
  loadBalancerIP: 192.168.88.141
